Updated theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Biology Major Theme
+Theme Name: Merit WP Theme
 Theme URI: http://library.wisc.edu
 Author: Al Nemec
 Author URI: http://www.wisc.edu/directories/person.php?name=JESSICA+NEMEC
