Fixed submenu css, added left and right arrow svgs and implemented second sub level into mobile menu

--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ body {
 	
 }
 
-.menu-item{
+.page_item{
 	display:block;
 }
 
-.sub-menu{
+.children{
 	display:none;
 }
 
@@ -8093,7 +8093,9 @@ border-radius: 3px;
 /************
 * menuMobile
 *************/
-
+.menu-item{
+	display:block;
+}
 .mobileMenu {
 	position: fixed;
 	top: 0px;
@@ -8155,7 +8157,7 @@ border-radius: 3px;
 	-webkit-transform: translate(0px,0px);
 	visibility: visible;
 }
-.mobileMenu .menu-item-has-children{
+.mobileMenu .page_item_has_children{
 	/*background:rgba(255,255,255,0.15);
 	background-position: 90% center;
 	background-size: auto 50%;*/
@@ -8275,6 +8277,26 @@ border-radius: 3px;
   
 }
 .subLevel1.visible {
+  transform: translate(0,0);
+  -webkit-transform: translate(0,0);
+}
+
+.subLevel2{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 300px;
+  background: #444444;
+  -webkit-overflow-scrolling: touch;
+  transform: translate(-300px,0px);
+  -webkit-transform: translate(-300px,0px);
+  transition: 0.4s cubic-bezier(0.150, 0.325, 0.250, 1.195);
+  -webkit-transition: 0.4s cubic-bezier(0.150, 0.325, 0.250, 1.195);
+  visibility: visible;
+  
+}
+.subLevel2.visible {
   transform: translate(0,0);
   -webkit-transform: translate(0,0);
 }
