--- a/style.css
+++ b/style.css
@@ -8105,7 +8105,7 @@ border-radius: 3px;
 	width: 300px;
 	height: 100%;
 	z-index:99999;
-	background: #444444;
+	background: #3C3C3C;
 	visibility: hidden;
 	overflow-x: hidden;
 	overflow-y: scroll;
@@ -8270,7 +8270,7 @@ border-radius: 3px;
   left: 0;
   height: 100%;
   width: 300px;
-  background: #444444;
+  
   -webkit-overflow-scrolling: touch;
   transform: translate(-300px,0px);
   -webkit-transform: translate(-300px,0px);
@@ -8280,6 +8280,7 @@ border-radius: 3px;
   
 }
 .subLevel1.visible {
+  background: #353535;
   transform: translate(0,0);
   -webkit-transform: translate(0,0);
 }
@@ -8290,7 +8291,6 @@ border-radius: 3px;
   left: 0;
   height: 100%;
   width: 300px;
-  background: #444444;
   -webkit-overflow-scrolling: touch;
   transform: translate(-300px,0px);
   -webkit-transform: translate(-300px,0px);
@@ -8300,6 +8300,7 @@ border-radius: 3px;
   
 }
 .subLevel2.visible {
+  background: #2C2B2B;
   transform: translate(0,0);
   -webkit-transform: translate(0,0);
 }
@@ -8310,7 +8311,6 @@ border-radius: 3px;
   left: 0;
   height: 100%;
   width: 300px;
-  background: #444444;
   -webkit-overflow-scrolling: touch;
   transform: translate(-300px,0px);
   -webkit-transform: translate(-300px,0px);
@@ -8320,6 +8320,7 @@ border-radius: 3px;
   
 }
 .subLevel3.visible {
+  background: #242323;
   transform: translate(0,0);
   -webkit-transform: translate(0,0);
 }
