--- a/style.css
+++ b/style.css
@@ -8107,8 +8107,8 @@ border-radius: 3px;
 	z-index:99999;
 	background: #3C3C3C;
 	visibility: hidden;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	/*overflow-x: hidden;
+	overflow-y: scroll;*/
 	-webkit-overflow-scrolling: touch;
 	box-shadow: 0px 1px 25px rgba(0,0,0,0.4);
 	transform: translate(-300px,0px);
