hides left& right navcorners when page loads

--- a/style.css
+++ b/style.css
@@ -641,8 +641,8 @@ a.button:active {
 	width: 13px;
 	height: 13px;
 	background: url("images/navcorner_left.png") no-repeat;
-	/* hides when page is loaded 
-	visibility:hidden;*/
+	/* hides when page is loaded */
+	visibility:hidden;
 }
 
 #branding .navcornerright {
@@ -653,8 +653,8 @@ a.button:active {
 	width: 13px;
 	height: 13px;
 	background: url("images/navcorner_right.png") no-repeat;
-	/* hides when page is loaded 
-	visibility:hidden;*/
+	/* hides when page is loaded */
+	visibility:hidden;
 }
 
 #uwred #branding {
